[gd_scene load_steps=8 format=3 uid="uid://bmp4eapuui7n4"]

[ext_resource type="Texture2D" uid="uid://b7coo40h7fr3r" path="res://backgrounds/Yellow.png" id="1_i8ohb"]
[ext_resource type="Script" path="res://scenes/Summary.gd" id="1_rpxqj"]
[ext_resource type="Texture2D" uid="uid://drp2ogk1ejgsr" path="res://menu/Restart.png" id="2_2vx2v"]
[ext_resource type="Texture2D" uid="uid://c1jvp8x2fm1i5" path="res://menu/levels/50.png" id="3_xl836"]
[ext_resource type="Texture2D" uid="uid://8eqama5v8bgj" path="res://menu/send.png" id="5_u7kln"]
[ext_resource type="Texture2D" uid="uid://bxg8rwbm5fwei" path="res://menu/sky1.png" id="6_7wmkh"]
[ext_resource type="Texture2D" uid="uid://dvym6hdwbp5o" path="res://menu/sy2.png" id="7_aujsb"]

[node name="Summary" type="Node"]
script = ExtResource("1_rpxqj")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("1_i8ohb")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
offset_left = 382.0
offset_top = 79.0
offset_right = 771.0
offset_bottom = 132.0

[node name="Result" type="Label" parent="Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 23
text = "Wynik: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuccessPanel" type="Panel" parent="."]
unique_name_in_owner = true
offset_left = 363.0
offset_top = 180.0
offset_right = 789.0
offset_bottom = 293.0

[node name="SuccessMsg" type="Label" parent="SuccessPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Gratulacje! Udało Ci się ukończyć Wyzwanie Prida! Podaj swój adres email w celu wzięcia udziału w konkursie:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="EmailInput" type="TextEdit" parent="SuccessPanel"]
unique_name_in_owner = true
offset_left = 21.0
offset_top = 170.0
offset_right = 326.0
offset_bottom = 209.0
placeholder_text = "twoj_email@example.com"

[node name="SendButton" type="TextureButton" parent="SuccessPanel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 132.0
offset_top = 113.5
offset_right = 181.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_u7kln")
texture_pressed = ExtResource("3_xl836")
stretch_mode = 0

[node name="EmailSent" type="Panel" parent="."]
unique_name_in_owner = true
offset_left = 370.0
offset_top = 350.0
offset_right = 784.0
offset_bottom = 390.0

[node name="EmailSentMsg" type="Label" parent="EmailSent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Twój email został zapisany i weźmie udział w loterii!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 179.0
offset_right = 35.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_2vx2v")
texture_pressed = ExtResource("3_xl836")
stretch_mode = 0

[node name="FailPanel" type="Panel" parent="."]
unique_name_in_owner = true
offset_left = 363.0
offset_top = 180.0
offset_right = 789.0
offset_bottom = 292.0

[node name="FailMsg" type="Label" parent="FailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Niestety nie udało Ci się zdobyć wymaganej liczby punktów :( Postaraj się zbierać więcej butelek Prida ;) Spróbuj jeszcze raz!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Skyscrapper" type="TextureRect" parent="."]
offset_left = 44.0
offset_top = 105.0
offset_right = 344.0
offset_bottom = 563.0
texture = ExtResource("6_7wmkh")
expand_mode = 1

[node name="Skyscrapper2" type="TextureRect" parent="."]
offset_left = 808.0
offset_top = 101.0
offset_right = 1108.0
offset_bottom = 559.0
texture = ExtResource("7_aujsb")
expand_mode = 1

[connection signal="pressed" from="SuccessPanel/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
